Fix post layout issue.

--- a/public/style/profile.css
+++ b/public/style/profile.css
@@ -164,7 +164,7 @@ body {
     position:relative;
     top:-370px;
     right:100px;
-    margin:30px 0px;
+    margin:65px 0px;
 }
 #memb_sos h1{
     color: #6a7480;
